tests/negative/gold/clashing-class-test.gold
tests/negative/clashing-class-test.toit:8:7: error: Redefinition of 'A'
class A:
      ^
tests/negative/clashing-class-test.toit:5:7: note: First definition of 'A'
class A:
      ^
Compilation failed
